# ladybug_debayer

./: .travis.yml  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/ladybug_debayer/: LadybugDebayer.h
launch/: debayer.launch
src/: DebayerNodelet.cpp  LadybugDebayer.cpp
